[package]
name = "mdbook-snips"
description = "Markers for hidden lines in rust blocks within an mdbook"
version = "0.1.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/dblanovschi/mdbook-snips"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "1"
clap = "3.0.0-beta.4"
mdbook = "0.4"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
regex = "1"
lazy_static = "1"